Bug 377391: Parts of a rectangle with CSS outline remains, when changing rectangle size. r+sr=roc